Pose the mod URL the way the game builds it, and time by the split
Two failures the three-OS matrix found, both in the tests rather than the code
they cover.

ScriptStore builds its classloader URLs with java.io.File.toURL, which is
deprecated for exactly the reason this test exists: it does not escape, so a mod
directory with a space arrives raw. It also replaces the separators and prepends
a slash, so Windows gets file:/C:/mods/... -- the same hierarchical shape as
Unix. Concatenating "file:" with an absolute path agreed with that on Unix and
posed file:C:\mods\... on Windows, a URL the game never emits, and the empty
hash was the test failing on a shape it does not see.

SeamTimer's assertion put a ceiling on wall-clock time. Sleeps overrun on a
loaded machine and never come back short: a runner charged 208 ms for 60 ms of
serves. Keep the lower bounds and state the invariant the seam actually claims,
that every millisecond of the span lands in inside or between and not both.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>